ca: da: nn: sc: sk: fix fr: it:

--- a/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
+++ b/Lisakoli_ya_molongo_ya_makoki_ya_moto.mw
@@ -133,19 +133,25 @@ Makoki pe bonsomi yango ekoki, ata moke te, kozala esongo na masengi ya Lisanga 
 Mobeko ata moko te ya Lisanga oyo ekoki kozala po na Leta, na lisanga ya bato, to na moto, likoki ya kosala likambo oyo ekonyata makoki pe bonsomi awa.
 
 [[bm:Hadamaden josiraw dantigɛkan]]
+[[ca:Declaració Universal dels Drets Humans]]
 [[cs:Všeobecná deklarace lidských práv]] 
+[[da:Menneskerettighedserklæringen]]
 [[de:Allgemeine Erklärung der Menschenrechte]] 
 [[en:Universal Declaration of Human Rights]] 
 [[es:Declaración Universal de los Derechos Humanos]] 
 [[eo:Universala Deklaracio de Homaj Rajtoj]]
-[[fr:Déclaration universelle des droits de l'homme]]
+[[fr:Déclaration universelle des Droits de l'Homme]]
 [[fy:Universele Ferklearring fan de Rjochten fan de Minske]] 
-[[it:Dichiarazione Universale dei Diritti dell'Uomo]] 
 [[he:ההכרזה לכל באי עולם בדבר זכויות האדם]] 
+[[it:Dichiarazione universale dei diritti dell'uomo]]
 [[minnan:Sè-kài Jîn-koân Soan-giân]] 
 [[nl:Universele Verklaring van de Rechten van de Mens]] 
+[[nn:Menneskerettsfråsegna]]
 [[no:Menneskerettighetserklæringen]] 
 [[pl:Powszechna Deklaracja Praw Człowieka]] 
 [[pt:Declaração Universal dos Direitos Humanos]] 
 [[ro:Declaraţia Universală a Drepturilor Omului]] 
-[[ru:Декларация прав человека]] [[zh:世界人权宣言]]
+[[ru:Декларация прав человека]] 
+[[sc:Decraratzione Universale de sos Deretos de s'Òmine]]
+[[sk:Všeobecná deklarácia ľudských práv]]
+[[zh:世界人权宣言]]
