*Empty MediaWiki Message*

--- a/Motópi.mw
+++ b/Motópi.mw
@@ -1,5 +1,5 @@
-[[Image:Football iu 1996.jpg|250px|right]]
 {{ndámbo}}
+[[Image:Football iu 1996.jpg|250px|right|]]
 [[Motópi]] ezalí [[masano]].
 
 [[Category:Masano]]
