Reverted edit of Node ue, changed back to last version by Bombo

--- a/Ingɛlɛ́tɛlɛ.mw
+++ b/Ingɛlɛ́tɛlɛ.mw
@@ -1,60 +1,144 @@
+[[af:Verenigde Koninkryk]] [[ar:مملكة متحدة]] [[bg:Обединено кралство]] [[br:Rouantelezh Unanet]] [[ca:Regne Unit de la Gran Bretanya i Irlanda del Nord]] [[cs:Velká Británie]] [[cy:Y Deyrnas Unedig]] [[da:Det Forenede Kongerige]] [[de:Großbritannien und Nordirland]] [[et:Suurbritannia]] [[el:Ηνωμένο Βασίλειο]] [[en:United Kingdom]] [[es:Reino Unido]] [[eo:Unuigita Reĝlando de Britio kaj Nord-Irlando]] [[ga:An Ríocht Aontaithe]] [[gl:Reino Unido]] [[ko:영국]] [[id:Britania Raya]] [[ia:Regno Unite]] [[it:Regno Unito]] [[he:הממלכה המאוחדת]] [[la:Regnum Unitum]] [[lt:Jungtinė Karalystė]] [[ms:United Kingdom]] [[nl:Verenigd Koninkrijk]] [[ja:イギリス]] [[no:Storbritannia]] [[oc:Reialme Unit]] [[nds:Groot Britannien]] [[pl:Wielka Brytania]] [[pt:Reino Unido]] [[ro:Regatul Unit]] [[rm:Reginavel Unì da la Gronda Britannia ed Irlanda dal Nord]] [[ru:Великобритания]] [[simple:United Kingdom]] [[sl:Združeno kraljestvo]] [[fi:Yhdistynyt kuningaskunta]] [[sv:Storbritannien]][[tl:Nagkakaisang Kaharian]] [[ur:برطانیہ]] [[vi:Liên hiệp Vương quốc Anh và Bắc Ai-len]] [[zh-cn:英国]] [[zh-tw:英國]] [[zh-min-nan:Li&#226;n-ha&#781;p &#212;ng-kok]]
 {{bokokani}}
 
+
+{{Infobox_country|
+native_name = United Kingdom of Great Britain and Northern Ireland |
+common_name = Ingɛlɛ́tɛlɛ |
+image_flag = uk flag large.png |
+image_coat = UK_Royal_Coat_of_Arms.png |
+image_map = LocationUnitedKingdom.png |
+national_motto = [[Dieu et mon droit]] (Royal motto)<br>([[Lifalansé]]: Nzambe nde likokí na ngai)''<sup>2</sup></small> |
+national_anthem = [[God Save the Queen]]<sup>3</sup> |
+official_languages = [[Nkotá ya Ingɛlɛ́tɛlɛ|None]]; [[Lingɛlɛsa]] ''[[de facto]]'' <sup>4</sup> |
+capital = [[Londoni]] |
+latd=51|latm=30|latNS=N|longd=0|longm=7|longEW=W|
+largest_city = [[Londoni]] |
+government_type = [[Constitutional monarchy]] |
+leader_titles = [[British monarchy|Queen]]<br>[[Prime Minister of the United Kingdom|Prime Minister]] |
+leader_names =  [[Elizabeth II ya Ingɛlɛ́tɛlɛ|Elizabeth II]]<br>[[Tony Blair]] |
+area_rank = 77th |
+area_magnitude = 1 E11 |
+area = 244,820 |
+percent_water = 1.3% |
+population_estimate_year = Yuli 2003 |
+population_estimate = 59,553,800 <sup>6</sup>|
+population_estimate_rank = 22nd |
+population_census = 58,789,194 |
+population_census_year = 2001 |
+population_density = 246.5 |
+population_density_rank = 49th |
+GDP_PPP_year = 2005 |
+GDP_PPP = $1,825,837 million |
+GDP_PPP_rank = 6th |
+GDP_PPP_per_capita = $30,658 |
+GDP_PPP_per_capita_rank = 15th |
+sovereignty_type = [[Act of Union 1800|Establishment]] |
+established_events =  |
+established_dates = 1801<sup>5</sup>|
+currency = [[Pound Sterling|British pound]] (&pound;) |
+currency_code =  GBP |
+time_zone = [[GMT]] |
+utc_offset = +0 |
+time_zone_DST = [[British Summer Time|BST]] |
+utc_offset_DST = +1 |
+cctld= [[.uk]]<sup>7</sup> |
+calling_code = 44 |
+footnotes = <sup>1</sup>In the UK, [[Nkotá ya Ingɛlɛ́tɛlɛ|some other language]]s have been officially recognised as legitimate [[autochthonous language|autochthonous]] [[regional language|(regional) languages]] under the [[European Charter for Regional or Minority Languages]]. In each of these, the UK's official name is as follows:
+*<small>[[Welsh language|Welsh]]: ''Teyrnas Unedig Prydain Fawr a Gogledd Iwerddon''
+*<small>[[Gayeliki y'Ekósi]]: ''An Rìoghachd Aonaichte na Breatainn Mhòr agus Eirinn a Tuath''
+*<small>[[Kirlándi]]: ''Ríocht Aontaithe na Breataine Móire agus Tuaisceart na hÉireann''
+*<small>[[Cornish language|Cornish]]: ''An Rywvaneth Unys a Vreten Veur hag Iwerdhon Glédh''
+*<small>[[Kiekósi]]: ''Unitit Kinrick o Great Breetain an Northren Ireland''<br/>
+<small><sup>2</sup> The Royal motto in Scotland is ''Nemo Me Impune Lacessit'' ([[Latin]]: "No-one harms me with impunity").<br><sup>3</sup> Unofficial.<br><sup>4</sup> Officially recognised regional languages:<br>in [[Wales]]: [[Welsh language|Welsh]]; and in [[Scotland]]: [[Scottish Gaelic language|Scottish Gaelic]] since 2004 Act.<br><sup>5</sup> Formed as ''United Kingdom of Great Britain and Ireland''. Name changed to the ''United Kingdom of Great Britain and Northern Ireland'' in 1927.<br><sup>6</sup> Official estimate provided by the UK [[Office for National Statistics]]. As of April 2005, the July 2004 estimates were not yet available.<br><sup>7</sup> [[ISO 3166-1]] is [[Great Britain|GB]], but [[.gb]] is unused}}
 
 == Historia ==
 
 == Politiki ==
 
+<br clear="all"/>
+
+== Subdivisions ==
+
+{{UK}}
+
+== Géographie ==
+
+== Économie ==
+
+== Démographie ==
+
+
+[[Image:United-Kingdom-demography.png|thumb|650px|center|Évolution de la démographie entre 1961 et 2003 (chiffre de la [[Organisation des Nations Unies pour l'alimentation et l'agriculture|FAO]], 2005). Population en milliers d'habitants.]]
+
+== Culture ==
+
+{{entête tableau charte}}
+|+ '''Fêtes et jours fériés'''
+! Date !! Nom Lingála !! Nom local !! Remarques
+|-
+| {{1er janvier}}
+| Jour de l'an || New Year's Day
+| Le premier jour de la nouvelle année est férié partout
+|- {{ligne grise}}
+| [[2 janvier]] || Second jour de l'an
+| January 2nd Holiday
+| Le second jour de la nouvelle année est férié en Écosse seulement
+|-----
+| [[17 mars]] || [[Saint Patrick|St Patrick]] || St Patrick's Day
+| Jour férié en Irlande du nord seulement
+|- {{ligne grise}}
+| [[Pâques]] est le premier dimanche qui suit la première pleine Lune de Printemps.<br /> Vendredi avant le Dimanche de [[Pâques]].
+| [[Vendredi saint]] || Good Friday
+| Crucifixion de [[Jésus-Christ|Jésus]]
+|-----
+| [[Lundi]] suivant le dimanche de [[Pâques]].
+| Lundi de [[Pâques]] || Easter Monday
+| Résurrection de [[Jésus-Christ|Jésus]] (pas en Écosse)
+|- {{ligne grise}}
+| Premier lundi de mai || 1{{er}} mai
+| May Day
+| Traditionnellement [[1er mai|1{{er}} mai]]
+|-----
+| Dernier lundi de mai ou premier lundi de juin
+| Jour férié du printemps || Spring Bank Holiday
+| Traditionnellement Pentecôte
+|- {{ligne grise}}
+| [[12 juillet]] || [[Bataille de la Boyne]]
+| Battle of the Boyne / Orangemen's Holiday
+| Jour férié pour l'[[Ordre Orange]] (en Irlande du nord seulement)
+|-----
+| Premier [[lundi]] d'[[août]] || Jour férié de l'été
+| Summer Bank Holiday || Jour traditionnel  (en Écosse seulement)
+|- {{ligne grise}}
+| Dernier [[lundi]] d'[[août]] || Jour férié de l'été
+| Summer Bank Holiday || Jour traditionnel  (pas en Écosse)
+|-----
+| [[25 décembre]] || [[Noël]] || Christmas Day
+| Naissance de [[Jésus-Christ|Jésus]]
+|- {{ligne grise}}
+| [[26 décembre]] || [[Lendemain de Noël]]
+| Boxing Day ||
+|}
+
+== Divers ==
+
+== Noms officiels ==
+*United Kingdom of Great Britain and Northern Ireland ([[anglais]])
+La [[Charte européenne des langues régionales ou minoritaires]] reconnaît le [[gallois]], l'[[écossais]], l'[[irlandais]], le [[cornique]] et le [[scots]] comme langues régionales du Royaume-Uni respectivement nommé ainsi :
+*Teyrnas Unedig Prydain Fawr a Gogledd Iwerddon ([[gallois]])
+*An Rìoghachd Aonaichte na Breatainn Mhòr agus Eirinn a Tuath ([[écossais]])
+*Ríocht Aontaithe na Breataine Móire agus Thuaisceart Éireann ([[irlandais]])
+*An Rywvaneth Unys a Vreten Veur hag Iwerdhon Glédh ([[cornique]])
+*Unitit Kinrick o Great Breetain an Northren Ireland ([[scots]])
+
 == Voir aussi ==
 {{commons|Category:United Kingdom|le Royaume-Uni}}
+{{wikitravel|les Royaume-Uni|Royaume-Uni}}
 
 === [[Wikipédia:Liens externes|Liens externes]] ===
 * {{en}} [http://www.ukonline.gov.uk/ Portail de l'administration britannique]
 * {{en}} [http://www.parliament.uk Parlement du Royaume-Uni]
 * {{fr}} [http://fr.jurispedia.org/index.php/Royaume-Uni_de_Grande-Bretagne_et_d%27Irlande_du_Nord Le droit du Royaume-Uni de Grande-Bretagne et d'Irlande du Nord (Jurispedia)]
 {{Pays d'Europe (UE)}}
-
-[[af:Verenigde Koninkryk]]
-[[ar:مملكة متحدة]]
-[[bg:Обединено кралство]]
-[[br:Rouantelezh Unanet]]
-[[ca:Regne Unit de la Gran Bretanya i Irlanda del Nord]]
-[[cs:Velká Británie]]
-[[cy:Y Deyrnas Unedig]]
-[[da:Det Forenede Kongerige]]
-[[de:Großbritannien und Nordirland]]
-[[et:Suurbritannia]]
-[[el:Ηνωμένο Βασίλειο]]
-[[en:United Kingdom]]
-[[es:Reino Unido]]
-[[eo:Unuigita Reĝlando de Britio kaj Nord-Irlando]]
-[[ga:An Ríocht Aontaithe]]
-[[gl:Reino Unido]]
-[[ko:영국]]
-[[id:Britania Raya]]
-[[ia:Regno Unite]]
-[[it:Regno Unito]]
-[[he:הממלכה המאוחדת]]
-[[la:Regnum Unitum]]
-[[lt:Jungtinė Karalystė]]
-[[ms:United Kingdom]]
-[[nl:Verenigd Koninkrijk]]
-[[ja:イギリス]]
-[[no:Storbritannia]]
-[[oc:Reialme Unit]]
-[[nds:Groot Britannien]]
-[[pl:Wielka Brytania]]
-[[pt:Reino Unido]]
-[[ro:Regatul Unit]]
-[[rm:Reginavel Unì da la Gronda Britannia ed Irlanda dal Nord]]
-[[ru:Великобритания]]
-[[simple:United Kingdom]]
-[[sl:Združeno kraljestvo]]
-[[fi:Yhdistynyt kuningaskunta]]
-[[sv:Storbritannien]]
-[[tl:Nagkakaisang Kaharian]]
-[[ur:برطانیہ]]
-[[vi:Liên hiệp Vương quốc Anh và Bắc Ai-len]]
-[[zh-cn:英国]]
-[[zh-tw:英國]]
-[[zh-min-nan:Li&#226;n-ha&#781;p &#212;ng-kok]]
+[[catégorie:Royaume-Uni|*]]
