*Empty MediaWiki Message*

--- a/Pápa_Benwa_XVI.mw
+++ b/Pápa_Benwa_XVI.mw
@@ -1,3 +1,4 @@
+{{bobóngoli na nkóta}}
 {{Infobox Pope |
   English name = Benedict XVI|
   image = [[Image:Popebenedictxvi firsttimeonthrone.jpg|200px|]]|
