--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -49,7 +49,7 @@
 
 == Lokótá ==
 
-Na ekolo Kɔ́ngɔ elobamí [[lokóta|nkótá]] kama mibale. Nyɔ́nsɔ wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Ciluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
+Na ekolo Kongo elobamí [[lokóta|nkótá]] kama mibale. Nyonso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Ciluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
 
 Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
 
