--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -49,11 +49,11 @@
 
 == Lokótá ==
 
-Na ekolo Kongo elobamí [[lokóta|nkótá]] kama mibale. Nyonso wana elakisi boyebi bwa bato ya bomengo etondi mabele. [[Ciluba]], [[kikongo]], [[lingála]] mpe [[kiswahili]] ezali bakota banene banei ya ekolo, kasi bakota kama mibale balobaka na ekolo Kongo.
+Na ekolo Kɔ́ngɔ elobamí [[lokóta|nkótá]] kama míbalé. Nyɔ́nsɔ wâná elakísí boyébí bwa bato ya bomɛngo etondi mabelé. [[Ciluba]], [[kikongo]], [[lingála]] mpé [[kiswahili]] ezalí bakótá banɛ́nɛ banei ya ekólo, kasi bakótá kama míbalé balobaka na ekólo Kɔ́ngɔ.
 
-Mingi se na kati ya bakota bya ekolo bokoyeba etando ya bikela, mabele, banyama mpe banzete.
+Míngi śé na káti ya bakótá bya ekólo bokoyéba etando ya bikelá, mabelé, nyama mpé nzeté.
 
-[[Mongo|Bamongo]] bazali na bakombo mingi ya nzete ya mbila na maye manso basalelaka. Solo, nzete ya mbila eyebani kaka mpona mafuta na masanga te. Eyebani lokola nkisi ekosilisa makono, naye mpe bakosala bitunga mpe bikila kila.
+[[Mongo|Bamongo]] bazalí na bakombo míngi ya nzeté ya mbíla na maye manso basálelaka. Sɔ̂lɔ, nzeté ya mbíla eyébaní káka mpó na mafúta na masanga tɛ̂. Eyébaní lokóla nkísi ekosílisa makɔnɔ, naye mpé bakosála bitúnga mpé bikila kila.
 
 == Likambo ==
 ''Ekakoli ya molayi : [[Historia ya Kɔ́ngɔ-Kinshasa]]''
