--- a/Lialémani.mw
+++ b/Lialémani.mw
@@ -2,9 +2,58 @@
 
 [[Category:Lokótá]] [[Category:Bisé ya Eropa]] 
 
-[[als:Deutsche Sprache]]
-[[de:Deutsche Sprache]]
-[[en:German language|German]]
-[[fr:Francais]]
+
 
 {{InterWiki|code=de}}
+
+[[af:Duits (taal)]]
+[[als:Deutsche Sprache]]
+[[ang:Þéodisc sprǽc]]
+[[ar:ألمانية (لغة)]]
+[[ast:Alemán]]
+[[br:Alamaneg]]
+[[ca:Alemany]]
+[[cy:Almaeneg]]
+[[da:Tysk (sprog)]]
+[[de:Deutsche Sprache]]
+[[el:Γερμανική γλώσσα]]
+[[en:German language]]
+[[eo:Germana lingvo]]
+[[es:Idioma alemán]]
+[[et:Saksa keel]]
+[[fi:Saksan kieli]]
+[[fo:Týskt mál]]
+[[fr:Allemand]]
+[[ga:Gearmáinis]]
+[[he:גרמנית]]
+[[hu:Német nyelv]]
+[[id:Bahasa Jerman]]
+[[is:Þýska]]
+[[it:Lingua tedesca]]
+[[ja:ドイツ語]]
+[[ko:독일어]]
+[[kw:Almaynek]]
+[[la:Lingua Theodisca]]
+[[lb:Däitsch]]
+[[li:Duits]]
+[[lt:Vokiečių kalba]]
+[[ms:Bahasa Jerman]]
+[[nds:Düütsche Spraak]]
+[[nl:Duits]]
+[[nn:Tysk språk]]
+[[no:Tysk språk]]
+[[pl:Język niemiecki]]
+[[pt:Língua alemã]]
+[[rm:Lingua tudestga]]
+[[ro:Limba germană]]
+[[ru:Немецкий язык]]
+[[se:Duiskkagiella]]
+[[simple:German language]]
+[[sl:Nemščina]]
+[[sv:Tyska]]
+[[th:ภาษาเยอรมัน]]
+[[tl:Wikang Aleman]]
+[[tr:Almanca]]
+[[tt:Alman tele]]
+[[vi:Tiếng Đức]]
+[[zh:德语]]
