*Empty MediaWiki Message*

--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -1,15 +1,18 @@
-[[Image:Congo_democratic_flag_300.png|right|thumb|188px|Flag ratio: 2:3]]
-'''Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa]]''' eponamaki na [[1997]].  Ekokani na Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa banda [[1960]] tee [[1963]].  Originally the stars on the left represented the six [[provinces of the Democratic Republic of Congo]], but this is no longer appropriate.  This flag was based on the old colonial flag, which omitted the stars to the left.
+[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|[[Image:FIAV_63.png]] Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa]]
+[[Image:Flag of Congo Free State.svg|right|thumb|188px|Bɛndɛ́lɛ na ntángo ya banɔ́kɔ́ (1877-1960)]]
+[[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|1960-1963]]
+[[Image:Flag of Congo Kinshasa 1963.svg|right|thumb|188px|1963-1966]]
+[[Image:Flag of Congo Kinshasa 1966.svg|right|thumb|188px|1966-1971]]
+[[Image:Zaire_flag.gif|right|thumb|188px|Drapeau du [[Zaïre]] (1971-1997)]]
+[[Image:Flag of Congo Kinshasa 1997.svg|right|thumb|188px|1997-2003]]
 
-[[Image:Zaire_flag.gif|right|thumb|188px|Bɛndɛ́lɛ na [[Zaire]] (1971-1997)]]
-
-[[Image:Congo democratic flag large 1963-1971.png|right|thumb|188px|Bɛndɛ́lɛ na 1963-1971]]
+'''Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa]]''' eponamaki na [[2003]].  Ekokani na Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa banda [[1960]] tee [[1963]].  Originally the stars on the left represented the six [[provinces of the Democratic Republic of Congo]], but this is no longer appropriate.  This flag was based on the old colonial flag, which omitted the stars to the left.
 
 {{nationalflags}}<!-- to edit this table, go to [[Template:Nationalflags]] -->
 
 
 [[Category:Repubiliki ya Kɔ́ngɔ Demokratiki]]
-[[Category:Ba Bɛndɛ́lɛ ya bisé|Kɔ́ngɔ Demokratiki, Repubiliki ya]]
+[[Category:Bɛndɛ́lɛ ya bisé|Kɔ́ngɔ Demokratiki, Repubiliki ya]]
 
 [[de:Flagge der Demokratischen Republik Kongo]]
 [[he:&#1491;&#1490;&#1500; &#1492;&#1512;&#1508;&#1493;&#1489;&#1500;&#1497;&#1511;&#1492; &#1492;&#1491;&#1502;&#1493;&#1511;&#1512;&#1496;&#1497;&#1514; &#1513;&#1500; &#1511;&#1493;&#1504;&#1490;&#1493;]]
