*Empty MediaWiki Message*

--- a/Bandalúngwa.mw
+++ b/Bandalúngwa.mw
@@ -1,16 +1,13 @@
-'''Bandalungwa''' (ou plus généralement « ''Bandal'' ») est une commune du centre de [[Kinshasa]] en [[République démocratique du Congo]]. Le nord de la commune est occupé par le camp militaire Kokolo, aux baraquements dont l'achitecture rappelle le style [[Flandre|flamand]].
-Il est séparé des quartiers habités, dont le quartier très animé du « ''Block'' » par l'[[avenue Kasa-Vubu]].
+'''Bandalungwa''', (« ''Bandal'' ») ezalí komini na kátikáti ya [[Kinshasa]].
 
-==Tala mpe==
-
-===Mankasa okati Wikipedia===
+==Tála mpé==
 *[[Molongo ya ba komini ya Kinshasa]]
 
-===Mankasa olibanda Wikipedia===
+=== Nkásá o libándá ===
 * [http://www.aedev.org/bandalungwa/ Site officiel de la commune]
 *[http://www.lib.utexas.edu/maps/world_cities/kinshasa_2001.jpg Carte de la ville de Kinshasa] 
 *[http://home.scarlet.be/~godfr123/cartes/carte_leopoldville_1954.jpg Carte de Léopoldville] (1954)
 
-{{CommunesKinshasa}}
+{{BakominiKinshasa}}
 [[Category:BaKomini ya Kinshasa]]
 {{ndambo}}
