--- a/Gombe_(Kinsásá).mw
+++ b/Gombe_(Kinsásá).mw
@@ -1,3 +1,5 @@
+[[image:Kinshasa gombe 2001.jpg|thumb|La Gombe]]
+
 '''La Gombe''' tǒ mpé '''Gombe''' ezalí [[komini]] na Nor ya Engumba-Etuka [[Kinshasa]]. Esúkí na ebale [[Kɔ́ngɔ (ebale)|Kɔ́ngɔ]] na Nor, mpé na [[boulevale ya 30 juin]] na Sudi.
 
 == Tála mpé ==
