--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -4,7 +4,7 @@
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
 |-----
-| align="center" width="285px" | [[Image:Congo_democratic_flag_300.png|140px]][[Image:ArmsDRCbig.gif|140px]]|
+| align="center" width="285px" | [[Image:Flag of Congo Kinshasa|140px]][[Image:ArmsDRCbig.gif|140px]]|
 |-----
 | align="center" width="280px" | ([[Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa|Détails]])([[Almwali ya Kɔ́ngɔ-Kinshasa|Détails]])
 |}
