--- a/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
+++ b/Bɛndɛ́lɛ_ya_Kongó-Kinsásá.mw
@@ -3,7 +3,7 @@
 [[Image:Flag of Congo Kinshasa 1960.svg|right|thumb|188px|1960-1963]]
 [[Image:Flag of Congo Kinshasa 1963.svg|right|thumb|188px|1963-1966]]
 [[Image:Flag of Congo Kinshasa 1966.svg|right|thumb|188px|1966-1971]]
-[[Image:Zaire_flag.gif|right|thumb|188px|Drapeau du [[Zaïre]] (1971-1997)]]
+[[Image:Flag of Zaire.svg|right|thumb|188px|Bɛndɛ́lɛ na [[Zaire]] (1971-1997)]]
 [[Image:Flag of Congo Kinshasa 1997.svg|right|thumb|188px|1997-2003]]
 
 '''Bɛndɛ́lɛ na [[Kɔ́ngɔ-Kinshasa]]''' eponamaki na [[2003]].  Ekokani na Bɛndɛ́lɛ na Kɔ́ngɔ-Kinshasa banda [[1960]] tee [[1963]].  Originally the stars on the left represented the six [[provinces of the Democratic Republic of Congo]], but this is no longer appropriate.  This flag was based on the old colonial flag, which omitted the stars to the left.
