Nkótá nationales -> [[Nkótá ya Ekólo]]

--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -15,7 +15,7 @@
 |-----
 | [[Lokóta ya Leta]] || [[lifalansé]]
 |-----
-| Nkótá nationales  
+| [[Nkótá ya Ekólo]]  
 | [[lingála]], [[kiswahili]],<br />[[ciluba]], [[kikɔ́ngɔ]]
 |-----
 | [[Engumba mokonzi]] || [[Kinshasa]]
