--- a/Famasi.mw
+++ b/Famasi.mw
@@ -1,4 +1,4 @@
-'''Pharmacie''' esika okosombaka bankisi. Bakopesa yo nkisi soki [[doktolo]] akomeli yo na [[recette]] mpe bakoki kotekela yo nkisi misusu ata soki doktolo akomeli yo te. Pharmacies bakoki mpe kopesa yo toli likolo ya [[maladi]] ya mikemike lokola kokolola kobimisa mai na zolo.
+'''Pharmacie''' esika okosombaka bankisi. Bakopesa yo nkisi soki [[doktolo]] akomeli yo na [[ordonnance]] mpe bakoki kotekela yo nkisi misusu ata soki doktolo akomeli yo te. Pharmacies bakoki mpe kopesa yo toli likolo ya [[maladi]] ya mikemike lokola kokolola kobimisa mai na zolo.
 
 Nzela ya kozua pharmacie yango oyo:
 * Tuna na zando to na [[butiki]] epayi wapi pharmacie ezali
