--- a/Joseph_Kasa-Vubu.mw
+++ b/Joseph_Kasa-Vubu.mw
@@ -3,7 +3,7 @@
 [[Image:Joseph kasa-vubu.jpg|thumb|Joseph Kasa-Vubu]]
 
 Mokambi Ekolo 01 07 1960 - 24 11 1965
-(Mokambi Bulamatari naye azalaki [[Patrice Lumumba]])
+(Mokambi Bulamatari na yě azalákí [[Patrice Lumumba]])
 
 * voir aussi [[Kongo Demokratiki (Tata-mokonzi)]]
 
