*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -12,3 +12,6 @@ Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpe ezwa [[bokɔnɔ]] 
 '''Bolamu bwa ekanga bozali na tembe te.'''
 
 Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpe landa mibeko mpo ya kosalela yango.
+
+==Voir aussi==
+[[Nzela ya kopekisa zemi]]
