*Empty MediaWiki Message*

--- a/Kapɔ́ti.mw
+++ b/Kapɔ́ti.mw
@@ -1,9 +1,11 @@
+{{ndambo}}
+
 [[image:preservatif1.jpg|thumb|Ekopikesa]]
 [[category:boyebi mosala ya mónganga]]
 [[category:sida]]
 [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
 
-{{ndambo}}
+
 
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki '''ekopekisa''' ngenge ya sida. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
 
@@ -14,4 +16,5 @@ Ebateli ekopekisa nzoto na biso ekoto ngenge ya [[sida]], mpe ezwa [[bokɔnɔ]] 
 Ebateli moko okolata yango kaka mbala moko. Tanga malamu mpe landa mibeko mpo ya kosalela yango.
 
 ==Voir aussi==
-[[Nzela ya kopekisa zemi]]
+* [[Ekopekisa (Ndenge)|Ndenge ya kolata mpe kosalela ekanga]]
+* [[Nzela ya kopekisa zemi]]
