--- a/Maladi_ya_Moto.mw
+++ b/Maladi_ya_Moto.mw
@@ -5,3 +5,6 @@ Soki omiyoki makambo oyo tokomi na likolo, okoki:
 * Komona [[doktolo]] nayo
 
 Soki yo to ndeko nayo azali koyoka mabe na moto mpe akoki komibebisa nzoto to komiboma mema ye na [[Misalisi ya Mbangu]] ya pene na esika ovandaka mpo yango esala mbutumoi. Malamu oyeba te misalisi ezali, mpe kobanga te kosenga yango. [[Maladi]] ya moto ezali eloko eyebani mpe ekoki koyela moto nyonso mpe misalisi ezali mpona moto nyonso.
+
+
+[[Category:Maladi]]
