*Empty MediaWiki Message*

--- a/Maladi_ewutaka_na_makambo_ya_bolingo.mw
+++ b/Maladi_ewutaka_na_makambo_ya_bolingo.mw
@@ -26,3 +26,6 @@ Maladi ewutaka na makambo ya bolingo mingi bakoki kobikisa. Kasi soki etuli, mal
 == Komeka mpoya maladi ewutaka na makambo ya bolingo ezali nini? ==
 Komeka esalamaka na [[dokotolo]] to efimiele mpe bakoki kosenga kotala nzoto nayo na
 esika ya sekele. Tango mosusu bakosenga makila to mosuba na mayi ya esika ya sekele.
+
+
+[[Category:Maladi]]
