--- a/Sidá.mw
+++ b/Sidá.mw
@@ -2,6 +2,7 @@
 [[category:boyebi mosala ya mónganga]]
 [[category:bokɔnɔ]]
 [[category:sida]]
+[[Category:maladi]]
 [[Image:Sida-repartition.png|thumb|400px|Estimation de la répartition des personnes séropositives fin 2003]] 
 
 '''Sida''' ('''S'''yndrome d''''i'''mmuno'''d'''éficience '''a'''cquise) epesamaka na [[ngenge]].
