--- a/Tibélekilosi.mw
+++ b/Tibélekilosi.mw
@@ -1,3 +1,5 @@
+[[Category:Maladi]]
+
 '''Tuberculose (TB)''' ezalí maladie óyo ebébisaka esíká ya kopomola na káti ya tolo, kasi ekokí mpé kobébisa bisíka misúsu na nzóto. Na bambula 150 óyo eleki na  [[Ingɛlɛ́tɛlɛ]], moto moko na kati ya bato 8 óyo bazalaki kokufa ezalaki mpo ya TB. Kasi na bambula ya 1980, maladie yango emonanaki mingi lisusu te, mpoya bato kozala na ndako ya malamu, koliya malamu mpe koyeba noki na kotiya pembeni baye bazali kobela mpo bazua lobiko noki. Kasi TB esili naino libela te. Ya soolo, TB ezali maladie enyokoloko mingi mokili mikolo oyo. Mbula oyo eleki batu mingi bakufaki na TB-8,000 na mokolo moko- koleka na bambula nyonso oyo esieleki. Na bambula 20 oyo eleki, TB ebandi komata malembemalembe na UK. Sikoyo bato 7,000 bazuaka yango na mbula moko – wana koloba moto moko na kati ya bato 10,000 na mboka mobimba.
 
 Buku oyo eyebisaka likolo ya maladie yango, ndenge ya koyeba yango, lobiko na yango, mpe elakisaka ndenge ezali na mboka na biso na kokokisa yango na ndenge ezalaka na mokili mobimba. Buku oyo mpe ezui batoli ya sika mpoya mopekisi ya BCG na UK, mpe babuku misusu na sango oyo nyonso ekosalisa koyeba makambo ya maladi yango na bawebsite.
