--- a/Maladi.mw
+++ b/Maladi.mw
@@ -1,9 +1,8 @@
 
 
 
-
 ==Maladi ewutaka na makambo ya bolingo==
 [[Maladi ewutaka na makambo ya bolingo]]
 
 
-[[Category:Ba almwali ya bisé|*]]
+[[Category:Maladi]]
