--- a/Bacillus_Calmette-Guérin.mw
+++ b/Bacillus_Calmette-Guérin.mw
@@ -1,3 +1,5 @@
+[[Category:Maladi]]
+
 '''Mobateli ya BCG''' ([[Bacillus Calmette-Guèrin]]) ezali na biloko oyo epesaka maladi ya [[tuberculose]] (TB) kasi basibalongoli makasi na yango. Lokola basibalongoli makasi na yango, ekoki kosala mabe lisusu te, kasi ekosalisa nzoto ya mwana ekolisa komibatela yango moko (immunite), mpo ata soki akutani na TB, akozua yango lisusu te.
 
 == Mpona nini mwana na ngai bapesa ye BCG? ==
