*Empty MediaWiki Message*

--- a/Katanga.mw
+++ b/Katanga.mw
@@ -1,3 +1,8 @@
 {{BiteniKongoKinshasa}}
 [[Category:Kɔ́ngɔ-Kinshasa]]
 [[Category:Bituka bya Kɔ́ngɔ-Kinshasa]]
+[[Image:DCongoKatanga.png|thumb|*]]
+[[Image:Stamp Katanga 1961 fair 50c.jpg|thumb|A postage stamp of independent Katanga]]
+[[Image:Flag Katanga.gif|thumb|Flag of independent Katanga]]
+
+'''Katanga''' ezali etuka se moko ya [[Kɔ́ngɔ-Kinshasa]].
