/* Nkóta ya Mokili */

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -33,123 +33,122 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 
 
 
-== Langues du monde ==
-* Afrikansi
-*	Belarusi
-*	Bengali
-*	Bork
-*	Breton
-*	Corsican
-*	Elmer Fudd
-*	Guarani
-*	Guyarati
-*	Hihakeri
-*	Interlingua
-*	Kanada
-*	Katalani
-*	Kazakh
-*	Kialemani
-*	Kiamariki
-*	Kiarabi
-*	Kiarmenya
-*	Kiazerbayani
-*	Kibaske
-*	Kibiyari
-*	Kibosinia
-*	Kibulgaria
-*	Kidanemark
-*		Kiengelesi
-*	Kiespanyola
-*	Kiestonia
-*	Kifalama
-*	Kifalansi
-*	Kifarose
-*	Kifelandi
-*	Kifrisi
-*	Kigaeliki
-*	Kigalicia
-*	kigrek
-*	Kihindi
-*	Kikambodia
-*	Kikorea
-*	Kikroasia
-*	Kilabania
-*	Kilatini
-*	Kilatvia
-*	Kilingoni
-*	Kimalasi
-*	Kimalayalami
-*	Kimalta
-*	Kimarati
-*	Kimasedonia
-*		Kindonesi
-*	Kiosita
-*	Kipersi
-*	Kipoloni
-*	Kiportugesa
-*	Kiportugesa (Brazil)
-*	Kipunzabi
-*	Kirlande
-*	Kirumani
-*	Kirusi
-*	Kiserbia
-*	Kisindi
-*	Kisinwazi (kikulutu)
-*	Kisinwazi (ya pepele)
-*	kisipelanto
-*	Kislanda
-*	Kisolovaki
-*	Kisoloveni
-*	Kisomali
-*	Kisundanesi
-*	Kisverge
-*	Kisverige
-*	Kiswahili
-*	Kitagalog
-*		Kitaliano
-*	Kitelugu
-*	kitseki
-*	Kiukrenia
-*	Kiungaria
-*	Kiurdu
-*	Kiusibeki
-*	Kivietnami
-*	Kiwelesi
-*	Kiyapani
-*	Kiyava
-*	Kiyuda
-*	Kizorzi
-*	Kurdish
-*	Kyrgyz
-*	Lingala
-*	Lituani
-*	Mutu Ya Laos
-*	Mutu Ya Mongoli
-*	Nepali
-*	Nynorsk
-*	Oriya
-*	Pashto
-*	Pig Latini
-*		Quechua
-*	Romansh
-*	Serbo-Kroatia
-*	Sesotho
-*	Shona
-*	Sinalese
-*	Tajik
-*	Tamili
-*	Tatar
-*	Thai
-*	Tigirinya
-*	Tonga
-*	Turk
-*	Turkmen
-*	Twi
-*	Uighur
-*	Xhosa
-*	Yiddish
-*	Yoruba
-*	Zulu
+== Nkóta ya Mokili ==
+
+* [[Afrikansi]]
+* [[Belarusi]]
+* [[Bengali]]
+* [[Breton]]
+* [[Guarani]]
+* [[Guyarati]]
+* [[Hihakeri]]
+* [[Interlingua]]
+* [[Kanada]]
+* [[Katalani]]
+* [[Kazakh]]
+* [[Kiswahili]]
+* [[Korsikani]]
+* [[Lialemani]]
+* [[Liamariki]]
+* [[Liarabi]]
+* [[Liarmenya]]
+* [[Liazerbayani]]
+* [[Libaske]]
+* [[Libiyari]]
+* [[Libosinia]]
+* [[Libulgaria]]
+* [[Lidanɛsi]]
+* [[Lingɛlɛsi]]
+* [[Lispanyoli]]
+* [[Liestonia]]
+* [[Lifalama]]
+* [[Lifalansé]]
+* [[Lifarose]]
+* [[Lifelandi]]
+* [[Lifrisi]]
+* [[Ligaeliki]]
+* [[Ligalisi]]
+* [[Ligrek]]
+* [[Lihindi]]
+* [[Likambodia]]
+* [[Likorea]]
+* [[Likroasia]]
+* [[Lilabania]]
+* [[Lilatini]]
+* [[Lilatvia]]
+* [[Lilingoni]]
+* [[Limalasi]]
+* [[Limalayalami]]
+* [[Limalta]]
+* [[Limarati]]
+* [[Limasedonia]]
+* [[Lindonɛsi]]
+* [[Liosita]]
+* [[Lipersi]]
+* [[Lipoloni]]
+* [[Liportugesa]]
+* [[Lipunzabi]]
+* [[Lirlande]]
+* [[Lirumani]]
+* [[Lirusi]]
+* [[Liserbia]]
+* [[Liserbo-kroati]]
+* [[Lisindi]]
+* [[Lisinwazi]]
+* [[Lisipelanto]]
+* [[Lislanda]]
+* [[Lisolovaki]]
+* [[Lisoloveni]]
+* [[Lisomali]]
+* [[Lisundanɛsi]]
+* [[Lisverge]]
+* [[Lisverige]]
+* [[Litagalog]]
+* [[Litaliano]]
+* [[Litelugu]]
+* [[Litseki]]
+* [[Liukrenia]]
+* [[Liungaria]]
+* [[Liurdu]]
+* [[Liusibeki]]
+* [[Livietnami]]
+* [[Liwɛlɛsi]]
+* [[Liyapani]]
+* [[Liyava]]
+* [[Liyuda]]
+* [[Lizorzi]]
+* [[Kurdish]]
+* [[Kyrgyz]]
+* [[Laosi]]
+* [[Lingála]]
+* [[Lituani]]
+* [[Mongoli]]
+* [[Nepali]]
+* [[Nynorsk]]
+* [[Oriya]]
+* [[Pashto]]
+* [[Pig Latini]]
+* [[Kweshwa]]
+* [[Romansh]]
+* [[Sesotho]]
+* [[Shona]]
+* [[Sinalese]]
+* [[Tajik]]
+* [[Tamili]]
+* [[Tatar]]
+* [[Thai]]
+* [[Tigirinya]]
+* [[Tonga]]
+* [[Turk]]
+* [[Turkmen]]
+* [[Twi]]
+* [[Uighur]]
+* [[Xhosa]]
+* [[Yiddish]]
+* [[Yorubá]]
+* [[Zulu]]
+----
+
 ----
 {{Ndambo}}
 [[Category:Lokótá]]
