/* Langues du Congo */

--- a/Lokótá.mw
+++ b/Lokótá.mw
@@ -29,9 +29,7 @@ Cette liste temporaire vous permet l'accès aux articles suivants pour les crée
 * [[kiswahili]]
 * [[ciluba]]
 * [[lifalansé]]
-* [[lingɛlɛ́sa]]
-
-
+* [[lingɛlɛsi]]
 
 == Nkóta ya Mokili ==
 
