*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -2,10 +2,10 @@
 ! colspan="2" bgcolor="orange" style="font-size:120%"|Tshiluba
 |-
 | valign="top"|Spoken in:
-|[[Democratic Republic of the Congo]]
+|[[Kɔ́ngɔ-Kinshasa|Republiki ya Kongo Demokratiki]]
 |-
 | valign="top"|Region:
-|[[Kasaï Occidental province]], [[Kasaï Oriental province]]
+|[[Kasaï-Occidental]], [[Kasaï-Oriental]]
 |-
 | valign="top"|Total speakers:
 |6.3 million ([[1991]])
