*Empty MediaWiki Message*

--- a/Ciluba.mw
+++ b/Ciluba.mw
@@ -1,5 +1,5 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300"
-! colspan="2" bgcolor="orange" style="font-size:120%"|Tshiluba
+! colspan="2" bgcolor="orange" style="font-size:120%"|Ciluba
 |-
 | valign="top"|Spoken in:
 |[[Kɔ́ngɔ-Kinshasa|Republiki ya Kongo Demokratiki]]
@@ -20,12 +20,15 @@
 &nbsp;&nbsp;&nbsp;[[Benue-Congo]]<br>
 &nbsp;&nbsp;&nbsp;&nbsp;[[Bantoid]]<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[[Narrow Bantu]]<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'''Tshiluba'''
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;'''Ciluba'''
 |-
 ! colspan="2" bgcolor="orange"|Official status
 |-
-| valign="top"|Official language of:
+| valign="top"|[[Lokóta ya Leta]]:
 | valign="top"|-
+|-
+| valign="top"|[[Nkótá ya Ekólo]]:
+| valign="top"|[[Kɔ́ngɔ-Kinshasa|Republiki ya Kongo Demokratiki]]
 |-
 | valign="top"|Regulated by:
 | valign="top"|-
@@ -37,6 +40,10 @@
 |ISO 639-2||lua
 |-
 |[[SIL]]||LUB
+|-
+!colspan="2" bgcolor="orange" | Carte
+|-
+|colspan="2" align="center" | <center>[[image:Map_-_DR_Congo%2C_major_languages.png|299px|Karte von {{{NAME_ORT}}}]]</center>
 |}
 
 <!--
