--- a/Mónganga-mǐno.mw
+++ b/Mónganga-mǐno.mw
@@ -4,3 +4,6 @@ Badoktolo ya Mino bango moko basalisaka na makambo ya mino mpo [[doktolo]] na ba
 Nzela ya kozua dentist yango oyo:
 * Tuna na zando to na [[butiki]] ya pene esika dentist azali
 * Kende yo moko okoma kombo nayo
+
+
+[[category:Maladi]]
