--- a/Batu_ya_linete.mw
+++ b/Batu_ya_linete.mw
@@ -1,2 +1,4 @@
 '''Batu ya linete''' bamekaka miso nayo mpe koyebisa yo oyo linete ekoki nayo. Bango mpe
 balukaka maladi ya minene ya miso lokola 'glaucoma'.
+
+[[category:maladi]]
