--- a/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
+++ b/Ntángo_ya_banɔ́kɔ́_(Kongó-Kinsásá).mw
@@ -1,19 +1,22 @@
-[[Image:CSKatangaTCongoBel1950a.jpg|thumb|right|Kongó ya Babelgi, 1950]]
+[[Image:Hw-stanley.jpg|thumb|Sir Henry Morton Stanley]]
+[[Image:CSKatangaTCongoBel1950a.jpg|thumb|right|Kɔ́ngɔ ya Babelgi, 1950]]
+[[Image:LeopoldIIBelgien.jpg|thumb|250px|right|Léopold II.]]
+[[Image:CongoVillageErased.jpg|thumb|400px|right|Village congolais détruit pour plantation de caoutchouk.]]
 
 Voir aussi [[Ntangó ya banɔ́kɔ́]]
 
-Wuta mobu koto na kama mwambe na tuku mwambe na minei tii mobu koto na kama mwambe na tuku mwambe na mitano, Conférence de Berlin esangisi bana ya [[Europa]], ya [[America]] mpe ya [[Turkia]] mpona kokamba mibeko mikofungola nzela ya Afrika. 
-Yango epesi mayele na ntoma [[Léopold II]] nakoyebisa mokili mobimba te ebale ya [[Kongó-Kinshasa|Kongó]] eye ekambami na moleki nzela [[Stanley]], ezali mabele mwa ye mpe na lisanga lya ye. 
+Wuta mobu koto na kama mwambe na tuku mwambe na minei tii mobu koto na kama mwambe na tuku mwambe na mitano, Conférence de Berlin esangisi bana ya [[Eropa]], ya [[America]] mpe ya [[Turkia]] mpona kokamba mibeko mikofungola nzela ya Afrika. 
+Yango epesi mayele na ntoma [[Léopold II]] nakoyebisa mokili mobimba te ebale ya [[Kongó-Kinshasa|Kɔ́ngɔ]] eye ekambami na moleki nzela [[Henry Morton Stanley]], ezali mabele mwa ye mpe na lisanga lya ye. 
 
 Kasi soki na buku ekolo ya Afrika eye eleki na maboko ya mindele elakisi lokola ekolo ya poto, na mibeko mpe na misala ya mbulamatari, solo ezalaki kokambama lokola eloko ya moto moko. 
 
-== État Indépendant du Congo (Ekolo ya Bonsomi ya Kongo)==
+== État Indépendant du Congo (Ekolo ya Bonsomi ya Kɔ́ngɔ)==
 Mapango ma ekolo Kongó esalami na bokakoli elongo na mindele miye basilaki kozwa ô kati, mabele manene. 
 Ya solo, likambo lya frontière ya Kongó esengi kotambola ekolo mobimba mpe kokamba bato na bokasi mpe esengaki kozwa bandeko ya miyindo. 
 
 Bitumba ekotaki kati ya batekisi mino ya nzoku épai moyindo, épai alabo na bakondzi ya miyindo. Bolongi ya léta epesaki na [[Belgica]] esengo enene. 
 
-Kasi sango ya malamu ya «État Indépendant du Congo» (to pe "Ekolo ya Bonsomi ya Kongo")te na Belgica mpe na mboka mopaya. Sango ya monyokoli etali mosala ya ndembo ekomi na mpoto. Ntoma Léopold II atindi bato bya bikolo ndenge na ndenge mpona koyeba likambo liina. 
+Kasi sango ya malamu ya «État Indépendant du Congo» (to pe "[[Ekolo ya Bonsomi ya Kɔ́ngɔ]]")te na Belgica mpe na mboka mopaya. Sango ya monyokoli etali mosala ya ndembo ekomi na mpoto. Ntoma Léopold II atindi bato bya bikolo ndenge na ndenge mpona koyeba likambo liina. 
 
 Matongi na nzoto ya mopaya ebangisi Belgica elingi kosukisa monyokoli. Yango wana ekolo Belgica, mokolo ya zomi na mitano sanza ya zomi na moko mobu koto na kama libwa na mwambe, ekamati bokondzi na etando ya ekolo État Indépendant du Congo. 
 Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele moko na Belgica. Na sima ya manso, bato babosani '''monyokoli''' mpe motungisi na tango ya ntoma Léopold II. Akomi ye moko «mokondzi malamu» mpe ekolo Kongó ekomi «ekolo moyindo ekambi mindele eye ekolakisa nzela».
@@ -21,7 +24,7 @@ Na bokambami bwa Belgica, ekolo État Indépendant du Congo ekomi lokola mabele 
 == Mpona kokóma «ekolo moyindo molakisa nzela» ==
 Ekambi miyindo na mindele ekopesa ndakisa, ebongi esala mabe te. Elingaki bokondzi ya botata esimbi Bruxelles mpona bokambi ya miyindo ezala malamu, ekolo emikoka bozwi bwa ye. Kasi etiki na miyindo, manso etali mbulamatari te lokola botei bana ba kelasi, botongi ekolo mpe mosala ya monganga. 
 
-Bokambi yango ezalaki mpe na makambo ya makasi. Ata mibeko mikokumbisa bikolo ya miyindo miye ekambi ekolo '''Kongó ya Belgica''', mosala ya bokasi ekosila kaka na mobu koto na kama libwa na tuku misato. Bakopesa bonyile na bapanzi makita mpe na bisanga bya bato kaka na mobu koto na kama libwa na tuku mitano na libwa. Na mibu koto na kama libwa na tuku mitano, posa ya kotombola ekolo ekopesa makanisi ya ekolo Kongo ndakisa malamu. Na tema ya mabe te, bisika bya ekolo Kongo na emoneli ya mokili mobimba ya mobu koto na kama libwa na tuku mitano na mwambe, epesaki maloba ya elikya enene.
+Bokambi yango ezalaki mpe na makambo ya makasi. Ata mibeko mikokumbisa bikolo ya miyindo miye ekambi ekolo '''[[Kɔ́ngɔ ya Belgica]]''', mosala ya bokasi ekosila kaka na mobu koto na kama libwa na tuku misato. Bakopesa bonyile na bapanzi makita mpe na bisanga bya bato kaka na mobu koto na kama libwa na tuku mitano na libwa. Na mibu koto na kama libwa na tuku mitano, posa ya kotombola ekolo ekopesa makanisi ya ekolo Kongo ndakisa malamu. Na tema ya mabe te, bisika bya ekolo Kongo na emoneli ya mokili mobimba ya mobu koto na kama libwa na tuku mitano na mwambe, epesaki maloba ya elikya enene.
 
 == Bisika bya bato na mbulamatari ==
 Na kati ya ekolo, '''bisika bya bato na mbulamatari''' ekambamaki na ''gouverneur général'' moye akambi mbulamatari mpe akoyebisa manso epai ya ntoma ya bikolo miyindo na minoko ya bakambi mabele. Bango bakotala misala minso ya léta (bofuti pako, misala ya mabele, misala ya botongi ekolo, bobwaki bosoto, bokati makambo, etc). Misala miina ekambami mpe na bakondzi ya miyindo oyo balatisi palata. 
@@ -34,13 +37,13 @@ Mateya etali yezu, ezalaki mosala ya '''basango''', bakatolike mpe na baprotesta
 Mbulamatari ya Kongo ya Belgica epesaki bango misala miye etali bosungi bato, misala mya bikela mpe bosali bokono. Na mobu koto na kama libwa na tuku minei na sambo, banganga nzambe katolike mpe protestant, bazalaki 21% na mindele bakosala ô ekolo Kongo. Lokola ekolo Kongo mibále balekaki basi, banganga nzambe bapesaki misala mingi na basi ya mindele. 
 
 == Bambulu-mbulu mpe basoda ==
-Basimbi bokondzi bwa mindele, '''bambulu-mbulu mpe basoda'''. Na ebandeli, basoda ya mindele baye bawuti belgica, scandinavia na [[italia]], etc mpe basoda ya miyindo, bana ya africa ya loboko lwa mwasi, bana ya [[Zanzibar]], bakotika moke-moke esika na basoda ya mboka na bokambami ba Belges. 
+Basimbi bokondzi bwa mindele, '''bambulu-mbulu mpe basoda'''. Na ebandeli, basoda ya mindele baye bawuti belgica, scandinavia na [[Italia]], etc mpe basoda ya miyindo, bana ya africa ya loboko lwa mwasi, bana ya [[Zanzibar]], bakotika moke-moke esika na basoda ya mboka na bokambami ba Belges. 
 
 == Minganga ==
 Na sima ya bokono ya mpongi eye ezongaka mbula nyoso, '''minganga''' ya mindele bakosilisa liboso makono ya seko. Wuta mobu koto na kama libwa na tuku misato, bakosalisa bato na bisika bazali mpe bakotambola mboka na mboka; ekobakisama mpe ba lopitalo ya mike mpe ya minene na bisika bya banganga nzambe mpe na bisika ya misala minene. 
 
 == «Mboka ya zomi» mpe dipanda == 
-Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Europa]] ebandi na mibu koto na kama libwa na tuku mitano. Mokano ya kobongisa mibeko elingi kokotisa ekolo Kongó na kati ya mabele ya Belgica. Bato babengi «mboka ya zomi». Mibu mitano na sima ya mobembo monene ya ntoma Baudouin na ekolo Kongó na mobu koto na kama libwa na tuku mitano na mitano, ekolo Kongó ezwi dipanda.
+Posa ya bondeko bonene kati ya bikolo ya Afrika mpe ya [[Eropa]] ebandi na mibu koto na kama libwa na tuku mitano. Mokano ya kobongisa mibeko elingi kokotisa ekolo Kongó na kati ya mabele ya Belgica. Bato babengi «mboka ya zomi». Mibu mitano na sima ya mobembo monene ya ntoma Baudouin na ekolo Kongó na mobu koto na kama libwa na tuku mitano na mitano, ekolo Kongó ezwi dipanda.
 
 [[de:Geschichte der Demokratischen Republik Kongo#Belgisch-Kongo]]
 [[en:History of the Democratic Republic of the Congo#The Belgian Congo]]
