--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -48,15 +48,15 @@ Mpo ya bokolisi mposa ya boyekoli bomoi, misala mya mosantu Vincent mpe elimo at
 
 Kaka o mboka Paris, babandisi "Centre International de Formation Saint-Vincent" (CIF). Ezali kopesa mateya ma recyclage mpo ya ba Lazariste bazali na mibu 35 kin'o 50.
 
-== Provincce ya Kongo-Beljika ==
-O ekolo [[Beljika]], ndako ya liboso ya lingomba lya Mission efungwamaki na [[Liège]] na 1902. Ndako ya yambo ya lingomba o Kongo efungwami na [[Bikoro]] (Mbandaka) na 1926.
+== Provincce ya Kɔ́ngɔ-Beljika ==
+O ekolo [[Beljika]], ndako ya liboso ya lingomba lya Mission efungwamaki na [[Liège]] na 1902. Ndako ya yambo ya lingomba o Kɔ́ngɔ efungwami na [[Bikoro]] (Mbandaka) na 1926.
 
 Na 1929 bafungoli ndako ya [[Leuven]] mpe 1952 eye ya [[Lessines]]. O mobu 1947, ndako inso isangani o Province ya Beljika mpe ''Congo Belge'' ekomi "mission" ya Province ena.
 
-O mobu 1991, na botalaka 'te ba Lazariste bazali lisusu mingi te o Beljika mpe awa motango mwa bango mokomi kokola o ekolo [[Kongo]], Bakonzi ba lingomba bazwi mokano mwa bokomisi Kongo Province mpe bobongoli Beljika bo Etuka to Région autonome o kati ya Province ya Kongo. Ezali na ndimbola enene 'te o bobange bwa ye, province-mama ekoka kokoma o maboko ma mwana oyo ye akolisi na motema monso.
+O mobu 1991, na botalaka 'te ba Lazariste bazali lisusu mingi te o Beljika mpe awa motango mwa bango mokomi kokola o ekolo [[Kongo|Kɔ́ngɔ]], Bakonzi ba lingomba bazwi mokano mwa bokomisi Kongo Province mpe bobongoli Beljika bo Etuka to Région autonome o kati ya Province ya Kɔ́ngɔ. Ezali na ndimbola enene 'te o bobange bwa ye, province-mama ekoka kokoma o maboko ma mwana oyo ye akolisi na motema monso.
 
-=== I. Province ya Kongo ===
-Province ya Kongo ebandisami na ba Lazariste ya Beljika. Sango [[Félix Dekempeneer]], mobandisi wa mission ya Bikoro, akomi o Kongo o mobu 1925, mpo ya kolengele boyei bwa ba nyango ba ''Filles de la Charité''. Mpe wana bamopesi mosala mwa bosangeli Nsango Elamu o etuka ya Bikoro. O ntango ena, mission ya Bikoro ezalaki na batu soko nkoto ntuku ibale, mpe mbele bakristu bobele nkoto yoko na ndambo to nkoto ibale. O mobu 1959, mission ya Bikoro ekomi Diocesi mpe Mgr [[Camille Vandekerkove]], lazariste, akomaki [[Episkopo]] wa yambo ya Diocesi ena. Basango Lazaristes babandisi ba [[paroisse]] iye: Bikoro St. Vincent de Paul (1926), [[Irebu]] Notre Dame du Chenal (1928), [[Lukolela]] Sacré-Coeur (1933), [[Bokongo]] Sainte Famille (1936), [[Yumbi]] Christ-Roi (1938), [[Bolobo Notre Dame (1946), [[Itipo]] Saint Joseph (1948), [[Iboko]] Notre Dame de la Médaille Miraculeuse (1956), [[Mooto]] Saint Emille (1962), mpe [[Momboyo]] Martyrs d'ouganda (1963).
+=== I. Province ya Kɔ́ngɔ ===
+Province ya Kongo ebandisami na ba Lazariste ya Beljika. Sango [[Félix Dekempeneer]], mobandisi wa mission ya Bikoro, akomi o Kongo o mobu 1925, mpo ya kolengele boyei bwa ba nyango ba ''Filles de la Charité''. Mpe wana bamopesi mosala mwa bosangeli Nsango Elamu o etuka ya Bikoro. O ntango ena, mission ya Bikoro ezalaki na batu soko nkoto ntuku ibale, mpe mbele bakristu bobele nkoto yoko na ndambo to nkoto ibale. O mobu 1959, mission ya Bikoro ekomi Diocesi mpe Mgr [[Camille Vandekerkove]], lazariste, akomaki [[Episkopo]] wa yambo ya Diocesi ena. Basango Lazaristes babandisi ba [[paroisse]] iye: Bikoro St. Vincent wa Paul (1926), [[Irebu]] Notre Dame du Chenal (1928), [[Lukolela]] Sacré-Coeur (1933), [[Bokongo]] Sainte Famille (1936), [[Yumbi]] Christ-Roi (1938), [[Bolobo Notre Dame (1946), [[Itipo]] Saint Joseph (1948), [[Iboko]] Notre Dame de la Médaille Miraculeuse (1956), [[Mooto]] Saint Emille (1962), mpe [[Momboyo]] Martyrs d'ouganda (1963).
 
 Ut'o mobu 1975, nsima ya liwa lya Mgr Camille, diocesi ya Bikoro esangani na eye ya [[Mbandaka]]. Nkombo ya diocèse ekomi Archidiocèse de Mbandaka-Bikoro. Liboso o bokambemi bwa Mgr [[Pierre Wijnants]], wa lingomba lya ba Missionnaire du Sacré-Coeur, na nsima o bokambemi bwa Mgr [[Frédéric Etsou]], oyo akomi lelo Cardinal mpe Episkopo wa lokumu wa [[Kinshasa]]. Lelo, Archidiocèse ya Mbandaka-Bikoro ezali o maboko ma Mgr [[Joseph Nkumuondala]].
 
@@ -64,14 +64,14 @@ O mobu 1982, ba Lazaristes bakamati paroisse Notre Dame du Congo na Mbandaka. Ns
 
 Na Kinshasa ba Lazariste bazali kosala o paroisse St Adrien ya Ngaba ut'o mobu 1986. Bobele na Kinshasa, bafungoli ndako ya boyambi basango bazali na lipaya na [[Limete]] (1991). Bazwi mpe mosala mwa bokambi bato ba mpasi na lopitalo St. Joseph. Awa babandi kozwa bana mboka baye balingi kolanda nzela ya mosantu Vincent awa na mboka Kongo, bafungoli ndako ya boyekoli ibale :
 
-O mobu 1981, Séminaire Interne (noviciat) "Source de vie" na [[Bokongo]], eye eleki na Itipo ut'o 1994. Na mobu 1985, bafungoli likindo linene to Scolasticat Saint Vincent de Paul, na [[Kimwenza]] (Kinshasa) mpo ya baye bakoyekolaka philosophie mpe théologie. Na moi mwa lelo, Province ya Kongo ezali na ba missionnaire 34 (ba nganga-Nzambe 32, diakono moko mpe mofulele moko) na bilenge ba likindo 27. Mpo etali bikolo bya bango, ba missionnaire bakabwani boye : 21 bazali ba congolais, 9 polonais, 2 belges, 1 hollandais mpe 1 italien.
+O mobu 1981, Séminaire Interne (noviciat) "Source de vie" na [[Bokongo]], eye eleki na Itipo ut'o 1994. Na mobu 1985, bafungoli likindo linene to Scolasticat Saint Vincent de Paul, na [[Kimwenza]] (Kinshasa) mpo ya baye bakoyekolaka philosophie mpe théologie. Na moi mwa lelo, Province ya Kɔ́ngɔ ezali na ba missionnaire 34 (ba nganga-Nzambe 32, diakono moko mpe mofulele moko) na bilenge ba likindo 27. Mpo etali bikolo bya bango, ba missionnaire bakabwani boye : 21 bazali ba congolais, 9 polonais, 2 belges, 1 hollandais mpe 1 italien.
 
-Ba lazariste congolais babale bazali missionnaire na Algérie mpe na Cameroun. Mosusu asengeli kokenda bo Directeur ya Séminaire interne na [[Kamerun]]. Lazariste polonais moko wa province ya Congo azali kosala mosala na Beljika. Ba Lazariste basusu banei bauti o province ya Kongo bazali sika kosala o ekolo [[Chine]] (1 hollandais) mpe na [[Haïti]] (2 polonais), mpe na [[Gresi]] (1 polonais).
+Ba lazariste congolais babale bazali missionnaire na Algérie mpe na Cameroun. Mosusu asengeli kokenda bo Directeur ya Séminaire interne na [[Kamerun]]. Lazariste polonais moko wa province ya Congo azali kosala mosala na Beljika. Ba Lazariste basusu banei bauti o province ya Kɔ́ngɔ bazali sika kosala o ekolo [[Chine]] (1 hollandais) mpe na [[Haïti]] (2 polonais), mpe na [[Gresi]] (1 polonais).
 
-==== Misala mya ba Lazariste o Congo ====
-O Archidiocese ya Mbandaka-Bikoro, basango ba Lazariste bazali kokamba ba paroisse mwambi (8). Mosala mwa bango motali mingi mpenza:
+==== Misala mya ba Lazariste o Kɔ́ngɔ ====
+O Archidiocese ya Mbandaka-Bikoro, basango ba Lazariste bazali kokamba ba paroisse mwambi (8). Mosala mwa bango motali mingi mpenza:
 
-* Bokolisi bakristu o nzela ya boyambi, o kati ya masanga make to Communauté Ecclésiale de Base (CEB), engebene na mwango mwa Eklezya ya Congo.
+* Bokolisi bakristu o nzela ya boyambi, o kati ya masanga make to Communauté Ecclésiale de Base (CEB), engebene na mwango mwa Eklezya ya Kɔ́ngɔ.
 * Bopesi mateya na bakatekisi to na ba laïc basusu baponami mpo ya kokamba masanga ma bakristu o mboka. Mateya mango makopesama mpo ya mobu moko na "Centre de Formation chrétienne de Bikoro". Epai esusu, "Centre d'Animation Missionnaire" ezali koteya ba mission populaire mpe kolengele ba laïc mpe bakambi ba mangomba ma apostolat.
 * Misala mya botomboli bomoto mpe mboka; bolendisi o misala mya bilanga; botongi biteyelo mpe Ndako-Nzambe o mboka na mpe misala misusu ndenge na ndenge miye mitali bolamu bwa bato
 
@@ -83,7 +83,7 @@ Mosala mwa bango o kati ya ba Laïc baye bazali kolanda mpe ndakisa ya Santu Vin
 
 === II. Région ya Beljika ===
 ==== 1. Leuven ====
-Ndako ya Leuven ekosalaka mosala mwa "procure" mpo ya Province ya Congo : Bosombi mpe botindi biloko mpo ya ba Lazariste bazali o Kongo. Ndako ya boyambi ba Lazaristes baye bayei kopemisa nzoto (bazali na congé) to mpe baye bazali kobela. Ndako ya bopemi mpo ya bandeko baye bakomi mibange to baye bazali kobela.
+Ndako ya Leuven ekosalaka mosala mwa "procure" mpo ya Province ya Kɔ́ngɔ : Bosombi mpe botindi biloko mpo ya ba Lazariste bazali o Kongo. Ndako ya boyambi ba Lazaristes baye bayei kopemisa nzoto (bazali na congé) to mpe baye bazali kobela. Ndako ya bopemi mpo ya bandeko baye bakomi mibange to baye bazali kobela.
 
 Ba Lazariste baye bavandi o ndako ya Leuven bazali mpe kosala misala na lopitalo (lokola aumônier to lokola volontaire), bakotalaka batu baye bazali na mikakatano, bakosanganaka na mangomba ya losambo (groupes de prière) mpe bakosalisaka ba Filles de la Charité baye bakolobaka flamand.
 
