--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -1,3 +1,5 @@
+[[Image:StVdP.jpg|thumb|Santu Vincent wa Paul]]
+
 '''Congrégation de la Mission (Lazariste)''' ebandi o mobu 1625 o mboka [[Paris]]. Kasi ut'o ebandela, mosala mwa lingomba lina moyebanaki mpe o bikolo bisusu.
 
 Lingomba ya Mission lisangisi ba nganga-Nzambe na mpe ba mofulele. Bango batangemi ba ''Religieux'' te, ata ko bakosalaka bilako. Likanisi ya Mosantu [[Vincent wa Paul]] lizalaki 'te akoka kobongisa lingomba lyoko na ntina ya kozala mpe kosala mosala lisanga na bato banso ba mokili. Engebene na mibeko mya Eklezya, bakotanga lyango "société de vie apostolique".
@@ -16,10 +18,10 @@ Lingomba lya Mission lizali kosangela nsango elamu na babola, na nguya ya elimo 
 Lingomba ya Mission likabwani na ba 45 Provinces ntuku inei na itano, na 3 Vice-provinces isato. O molongo mobimba, lingomba lizali kosala na bikolo ntuku mwambi,bikabwani o bituka to continent inso: [[Afrika]], [[Amerika]], [[Autralie]], [[Asia]] (kin'o [[Chine]]) mpe [[Eropa]].
 
 == Tozali boni o kati ya lingomba? ==
- O mobu 1998, lingomba ya Mission lizalaki na ba membre 4193. O kati ya bango.
+ O mobu 1998, lingomba ya Mission lizalaki na ba membre 4193. O kati ya bango.
 
  Baepiskopo bazali                                    29
- Banganga-Nzambe                                    3191
+ Banganga-Nzambe                                    3191
  Ba mofulele                                         203
  Ba diakono na bai-likindo basali séminaire interne  770
  
