/* Misala mya lingomba ut'o kala */ link

--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -30,10 +30,10 @@ O mibu miye, motango mwa baye bazali kokota na lingomba o bikolo bya Europa moza
 == Misala mya lingomba ut'o kala ==
 Engebene na mibeko mya lingomba,
 * Uto ebandela, lingomba ya Mission lizali koteya ba mission populaire na ba paroisse.
-* Lingomba lizali mpe kosangela o bikolo biye biyoki naino Nsango Elamu te (mission "ad gentes"). Ezala o bikolo biyebanaka lokola bikolo bya bopalanginyi eyamba to " pays de Mission " (Afrika, Asia, Australie), ezala mpe sik'oyo na Albania, mpe bikolo Ukraina, Siberia, Lituania, Tanzania, Bisanga Salomom, Cuba, Taiwan, Mozambique na mpe bisusu.
+* Lingomba lizali mpe kosangela o bikolo biye biyoki naino Nsango Elamu te (mission "ad gentes"). Ezala o bikolo biyebanaka lokola bikolo bya bopalanginyi eyamba to " pays de Mission " (Afrika, Asia, Australie), ezala mpe sik'oyo na [[Albania]], mpe bikolo [[Ukraina]], [[Siberia]], [[Lituania]], [[Tanzania]], [[Bisanga Salomom]], [[Cuba]], [[Taiwan]], [[Mozambique]] na mpe bisusu.
 * O bikolo biyike, ba Lazariste bazali kokoba mosala mwa bobokoli bilenge o nzela ya bonganga na makindo (ba Séminaire), mingi mpenza bikolo bizangi ba nganga-Nzambe ba bangomei (clergé autochtone).
 * Basango bazali kosalisa ba Filles de charités na nzela ya molimo, mpe mangomba masusu ya ba laic mabandisami na mosantu Vincent (lokola AIC) to mazali kolanda nzela eye alakisaki o kati ya Eklezya mpe mokili (Société de Saint-Vincent de Paul, Association de la Médaille miraculeuse, Jeunesse Mariale Vincentienne...).
-* O bikolo bisusu, biteyelo bizali apostolat enene, banda biye bya yambo kin'o biye bya likolo (universités) (Philippines, USA ).
+* O bikolo bisusu, biteyelo bizali apostolat enene, banda biye bya yambo kin'o biye bya likolo (universités) ([[Philippines]], [[USA]] ).
 
 == Mioko misala mya sika ==
 Ba Lazariste basusu bazali kosala elongo na batu bavandi pene na bikunde binene bya bosoto na bingumba (lokola na Payatas, Philippines). Basusu bazali kosalisa bilenge biye batukoli nzotu na bomeli makaya makasi (ba drogué), bato bakobela sida (na Europa), bato bakufa matoi (o Irlande), bitumbe, bana bazali kokola o ba balabala (ba shegué) mpe batu bazangi ndako. Ba Lazariste basusu bazali kosala mpo ya botomboli bomoi na mayele ma batu baye bazali naino na bizaleli bya kala (indigènes), to ya baye bakovandaka esika yoko te (ba Tzigane).
