--- a/Esálela.mw
+++ b/Esálela.mw
@@ -6,5 +6,11 @@
 [[paláki]]
 [[bongó]]
 [[mángolá]]
+[[molembo]]
+[[mpúku]]
+[[etángela]]
+[[diski ebómbelo enéne]]
+[[diski ebómbelo iké]]
+[[nsábi]]
 
 [[category:Esálela]]
