--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -8,6 +8,7 @@
 
 == (liens) ==
 http://www.congopage.com/phpBB/viewforum.php?f=33
+http://www.ceeba.at/#Etudes%20Linguistiques Institut de culture africaine de Bandundu
 
 ----
 Comment améliorer un article sur une langue?
