*Empty MediaWiki Message*

--- a/Kikɔ́ngɔ.mw
+++ b/Kikɔ́ngɔ.mw
@@ -7,8 +7,8 @@
 
 
 == (liens) ==
-http://www.congopage.com/phpBB/viewforum.php?f=33
-[[http://www.ceeba.at/#Etudes%20Linguistiques Institut de culture africaine de Bandundu (lifalansé)]]
+* http://www.congopage.com/phpBB/viewforum.php?f=33
+* [[http://www.ceeba.at/#Etudes%20Linguistiques Institut de culture africaine de Bandundu (lifalansé)]]
 
 ----
 Comment améliorer un article sur une langue?
