--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -2,7 +2,7 @@
 
 '''Congrégation de la Mission (Lazariste)''' ebandi o mobu 1625 o mboka [[Paris]]. Kasi ut'o ebandela, mosala mwa lingomba lina moyebanaki mpe o bikolo bisusu.
 
-Lingomba ya Mission lisangisi ba nganga-Nzambe na mpe ba mofulele. Bango batangemi ba ''Religieux'' te, ata ko bakosalaka bilako. Likanisi ya Mosantu [[Vincent wa Paul]] lizalaki 'te akoka kobongisa lingomba lyoko na ntina ya kozala mpe kosala mosala lisanga na bato banso ba mokili. Engebene na mibeko mya Eklezya, bakotanga lyango "société de vie apostolique".
+Lingomba ya Mission lisangisi ba nganga-[[Nzambe]] na mpe ba mofulele. Bango batangemi ba ''Religieux'' te, ata ko bakosalaka bilako. Likanisi ya Mosantu [[Vincent wa Paul]] lizalaki 'te akoka kobongisa lingomba lyoko na ntina ya kozala mpe kosala mosala lisanga na bato banso ba mokili. Engebene na mibeko mya Eklezya, bakotanga lyango "société de vie apostolique".
 
 == Ntina ya lingomba ==
 Lingomba lya Mission lizali kosangela nsango elamu na babola, na nguya ya elimo ya [[Kristu]]. Mosala mokotinda ba Lazariste bazala na bizaleli biye :
