--- a/Vincent_wa_Paul.mw
+++ b/Vincent_wa_Paul.mw
@@ -3,7 +3,7 @@
 
 '''Vincent wa Paul''' ([[1581]] - [[1660]]) abotami o mboka [[Pouy]], pene na engumba ya [[Dax]], o mabele ma [[Landes]], na ekolo [[Falansia]]. Azali mwana wa basato o libota lya ye (bato ba bilanga). Kino mibu zomi na mitano akoli se o libota lyango, akaboli mpasi elongo na bandeko banso. Kasi nsima ena, abandi koyenga yenga, mibu zomi na misato mobimba, akabwani na bandeko na ntina 'te akima bobola. O eleko ena, bonganga-Nzambe bozalaki nzela ya kokoma moto mpe ya kosalisa libota. Vincent wa Paul akanisaki kobikisa na nzela ena libota lya ye. Yango wana akuli bonganga na mibu zomi na libwa.
 
-Kasi manso maleki lokola Vincent akanisaki te. Ekolo Falansia ezalaki na mikakatano. Batu bazalaki lisusu na makoki te mpe bitumba ezali kovandisa batu na nzala enene. Banganga-Nzambe mpe bazalaki na mpasi, bakisa mpe myoko mimesano mibe. Yango etindi Vincent abongola makanisi ma yé: aluki kopesa bomoi bwa ye mpo ya babola banso.
+Kasi manso maleki lokola Vincent akanisaki te. [[Ekolo]] Falansia ezalaki na mikakatano. Batu bazalaki lisusu na makoki te mpe bitumba ezali kovandisa batu na nzala enene. Banganga-[[Nzambe]] mpe bazalaki na mpasi, bakisa mpe myoko mimesano mibe. Yango etindi Vincent abongola makanisi ma yé: aluki kopesa bomoi bwa ye mpo ya babola banso.
 
 O mobu [[1617]], makambo mabale mamemi ye na mbongwana ena. O sanza ya yambo ya mobu mona, babengi ye akenda kosalisa moto moko alingi awei. Banso bazalaki komona moto ona lokola nsuka ya moto molamu. Kasi yemei ayebisi Vincent 'te soki asikolaka molimo mwa ye na sakramentu ya ntubela te, mbele awei na masumu maluti. Bobola bona bwa molimo bobeti motema mwa Vincent mingi. Se o mobu mona, mokolo moko mwa sanza ya mwambi, na ngonga alingi kobanda losambo la misa, bayeli yé nsango 'te libota lyoko lizali na mpasi, mpe banso ba libota nde bakufi soki bazwi lisalisi te. Vincent wa Paul alendisi bakristu 'te basalisa bango. Aluki mpe kobongisa lisalisi lina. Bobola bona bwa nzoto bobeti mpe motema mwa Vincent wa Paul. Banda ntango ena nde aluki ntango inso o mosala mwa ye kobikisa na molimo mpe na nzoto ya bato, mingi mpenza babola.
 
