--- a/Islamu.mw
+++ b/Islamu.mw
@@ -2,3 +2,7 @@
 '''Islamu''' (na [[kiarabi]] balobi ''Islam'' - لإسلام), to mpe '''[[Kimosulmani]]''', ezali moko okati ya barelijion misatu ya [[balandi nzambe moko]]. Lokola okati ya barelijion basusu babale - [[Kimokristo]] na [[Kimoyuda]], [[mosulmani|bamosulmani]] (to mpe balandi Islamu) ba sambelaka nzambe oyo bato-mayele babengi '''nzambe ya Abalamu''' (''Ibrahim'' na kiarabi).
 
 [[en:Islam]][[pt:Islam]][[fr:Islam]][[sw:Uislamu]][[ar:Islam]][[es:Islam]]
+
+
+[[category:relijion]]
+[[category:islamu]]
