--- a/Boklísto.mw
+++ b/Boklísto.mw
@@ -3,3 +3,6 @@
 '''Boklísto''' (na [[lifalansé]] balobi ''[[:fr:Christianisme|Christianisme]]'') ezali relizion ya balandi Yesu ya Nazaleti. Relizion oyo ezui nkombo na yango, na nkombo ya moyángeli na yango ya liboso - Yesu - oyo ayebani mpe na nkombo ya '''mobikisi''', to mpe '''''Kristo''''' na [[ligresi]] (lokótá la [[Gresi]]).  Boklísto ezali mpe relizion moko okati ya barelijion misatu ya '''[[balandi nzámbe mɔ́kɔ́]]'''.  ('''[[Boklísto]]''', '''[[Islamu]]''' na '''[[Boyúda]]'''. Lokola okati ya barelijion basusu babale, [[bakristo]] basambelaka nzambe oyo bato-mayele babengi '''Nzámbe ya Abalamu''' (''Abraham'').
 
 [[fr:Christianisme]][[en:Christianity]]
+
+[[category:relijion]]
+[[category:boklísto]]
