--- a/Boyúda.mw
+++ b/Boyúda.mw
@@ -3,3 +3,6 @@
 '''Boyúda''' (na [[lifalansé]] balobi ''Judaisme'', na [[liébeleo]] (hebreux) balobi ''Yahadut'') ezali relijion ya ekolo ya [[moyuda|Bayuda]]. Ezali mpe relijion ya mokɔ́lɛ koleka - mpe na lingomba moke koleka, okati ya barelijion misatu ya '''[[balandi nzambe moko]]'''.  ('''[[Kimokristo]]''', '''[[Islamu]]''' na '''[[Kimoyuda]]'''. Lokola okati ya barelijion basusu babale, [[moyuda|bayuda]] basambelaka nzambe oyo bato-mayele babengi [[Nzambe ya Abalamu]] (''Abraham'' na liébeleo)
 
 [[en:judaism]][[fr:judaisme]]
+
+[[category:relijion]]
+[[category:Boyúda]]
