--- a/Lazariste.mw
+++ b/Lazariste.mw
@@ -98,3 +98,9 @@ Lokasa to revue mensuelle moko (2000 exemplaires) lozali kosangisa bayebani ba b
 
 ==== 3. Liège ====
 Maison "ad instar domus" Ba Lazariste ba Liège bavandi esika yoko te, kasi bazali motema moko na mosala : Na bosalisi banyango ba Filles de la Charité, mangomba ma bilenge mpe na boteyi bakristu na ba ndako. Na bosalisi baye bayei lipaya na Belgique (immigrés) na mpe baye bakimi bitumba na mobulu o mboka ya bango (réfugiés). Tozali kosalisa bango na biloko, kobunda mpo ya makoki mpe bomoto ya bango.
+
+{| class="WSerieV" id="WSerie_Christianisme" tableborder="1" cellspacing="0" style="padding: 0.3em; float:right; clear: right; margin: 0 0 5px 1em; border:1px solid #669966; border-right-width: 2px; border-bottom-width: 2px; background:#BBCCCC; text-align:center;"
+{{Religions}}
+|}
+[[category:relijion]]
+[[category:boklísto]]
