--- a/Vincent_wa_Paul.mw
+++ b/Vincent_wa_Paul.mw
@@ -22,3 +22,10 @@ Apesi babola lokumu (bazali "bankumu mpe bakonzi ba biso"), asikoli bomoi bwa ba
 [(http://www.st-vincent-de-paul.org/) (Société Saint Vincent de Paul)]
 
 [[fr:Vinzenz de Paul]] [[de:Vinzenz von Paul]] [[en:Vincent de Paul]] [[la:Vincentius a Paulo]] [[pt:Vicente de Paulo]] [[vi:Vinh Sơn Phaolô]]
+
+
+{| class="WSerieV" id="WSerie_Christianisme" tableborder="1" cellspacing="0" style="padding: 0.3em; float:right; clear: right; margin: 0 0 5px 1em; border:1px solid #669966; border-right-width: 2px; border-bottom-width: 2px; background:#BBCCCC; text-align:center;"
+{{Religions}}
+|}
+[[category:relijion]]
+[[category:boklísto]]
