+Kenya, Burundi, Rwanda, Uganda, Tanzania

--- a/Kiswahíli.mw
+++ b/Kiswahíli.mw
@@ -3,7 +3,7 @@
 [[Image:Swahili-pn.jpg|thumb|Description]]
 [[Image:Map_-_DR_Congo,_major_languages.png|thumb|texte manquant pour exemple de langue.]]
 
-'''Kiswahili''' ezali [[lokótá]] na bato na [[Kongo-Kinshasa|Kongo]].
+'''Kiswahili''' ezali [[lokótá]] na bato na [[Kɔ́ngɔ-Kinshasa|Kɔ́ngɔ-demokratiki]], [[Kenya]], [[Burundi]], [[Rwanda]], [[Uganda]] mpé [[Tanzania]].
 
 
 
