--- a/Kongó-Kinsásá.mw
+++ b/Kongó-Kinsásá.mw
@@ -1,5 +1,5 @@
 {| border="1" cellpadding="2" cellspacing="0" align="right" width="300px"
-|+ <font size="+1">'''[[Repubiliki ya Kɔ́ngɔ Demokratiki]]<br>(Kɔ́ngɔ-Kinshasa)<br>Republique Democratique du Congo'''</font>
+|+ <font size="+1">'''[[Ekólo Nsɔ́mí Kɔ́ngɔ]]<br>(Kɔ́ngɔ-Kinshasa)<br/>République Democratique du Congo<br /> Repubilika ya Kongo Demokratika <br /> Jamhuri ya Kidemokrasia ya Kongo   <br /> Ditunga dia Kongu wa Mungalaata'''</font>
 |-----
 | style="background:#efefef;" align="center" colspan="2" |
 {| border="0" cellpadding="2" cellspacing="0"
