--- a/Sidá.mw
+++ b/Sidá.mw
@@ -31,3 +31,6 @@ Sima ya bokoteli bwa ngenge o nzoto, tokoki kopesa ngenge ena na moto mosusu. Ng
 
 === Ndenge nini tokoki komikebisa na ngenge ya sida? ===
 Ntango ya botamboli ya mwasi na mobali: Kaka nde ekanga ekoki [[ekopekisa|kopekisa]] ''ngenge ya sida''. Tokoki kosomba ebateli na bisika biyike: esika batekaka nkisi, makaya masanga.
+
+[[de:Aids]]
+[[fr:Syndrome d'immunodéficience acquise]]
