--- a/Ekólo_Wali.mw
+++ b/Ekólo_Wali.mw
@@ -1,3 +1,46 @@
-
 {{UK}}
 [[category:Ingɛlɛ́tɛlɛ]]
+
+
+[[als:Wales]]
+[[ca:Gal·les]]
+[[cs:Wales]]
+[[cy:Cymru]]
+[[da:Wales]]
+[[de:Wales]]
+[[en:Wales]]
+[[eo:Kimrio]]
+[[es:Gales]]
+[[et:Wales]]
+[[fi:Wales]]
+[[ga:An Bhreatain Bheag]]
+[[gd:A'Chuimrigh]]
+[[gl:Gales - Cymru]]
+[[he:ויילס]]
+[[id:Wales]]
+[[it:Galles]]
+[[ja:ウェールズ]]
+[[ka:უელსი]]
+[[ko:웨일스]]
+[[kw:Kembra]]
+[[la:Cambria]]
+[[lt:Velsas]]
+[[lv:Velsa]]
+[[nds:Wales]]
+[[nl:Wales]]
+[[nn:Wales]]
+[[no:Wales]]
+[[pl:Walia]]
+[[pt:País de Gales]]
+[[rm:Valisa]]
+[[ro:Ţara Galilor]]
+[[ru:Уэльс]]
+[[sco:Wales]]
+[[simple:Wales]]
+[[sk:Wales]]
+[[sl:Wales]]
+[[sr:Велс]]
+[[sv:Wales]]
+[[th:เวลส์]]
+[[zh:威爾士]]
+[[zh-min-nan:Cymru]]
