--- a/Ekósi.mw
+++ b/Ekósi.mw
@@ -1,2 +1,50 @@
 {{UK}}
 [[category:Ingɛlɛ́tɛlɛ]]
+
+[[als:Schottland]]
+[[ang:Scotland]]
+[[ast:Escocia]]
+[[bg:Шотландия]]
+[[ca:Escòcia]]
+[[cs:Skotsko]]
+[[cy:Yr Alban]]
+[[da:Skotland]]
+[[de:Schottland]]
+[[el:Σκωτία]]
+[[en:Scotland]]
+[[eo:Skotlando]]
+[[es:Escocia]]
+[[et:Šotimaa]]
+[[fi:Skotlanti]]
+[[fo:Skotland]]
+[[ga:Albain]]
+[[gd:Alba]]
+[[gl:Escocia - Alba]]
+[[he:סקוטלנד]]
+[[ia:Scotia]]
+[[id:Skotlandia]]
+[[is:Skotland]]
+[[it:Scozia]]
+[[ja:スコットランド]]
+[[ka:შოტლანდია]]
+[[ko:스코틀랜드]]
+[[kw:Alban]]
+[[la:Scotia]]
+[[li:Sjotland]]
+[[lt:Škotija]]
+[[ms:Scotland]]
+[[nl:Schotland]]
+[[nn:Skottland]]
+[[no:Skottland]]
+[[pl:Szkocja]]
+[[pt:Escócia]]
+[[rm:Scozia]]
+[[ro:Scoţia]]
+[[ru:Шотландия]]
+[[sco:Scotland]]
+[[simple:Scotland]]
+[[sk:Škótsko]]
+[[sl:Škotska]]
+[[sr:Шкотска]]
+[[sv:Skottland]]
+[[zh:蘇格蘭]]
