--- a/Irlandí_ya_Nola.mw
+++ b/Irlandí_ya_Nola.mw
@@ -1,2 +1,36 @@
 {{UK}}
 [[category:Ingɛlɛ́tɛlɛ]]
+
+[[cs:Severní Irsko]]
+[[cy:Gogledd Iwerddon]]
+[[da:Nordirland]]
+[[de:Nordirland]]
+[[en:Northern Ireland]]
+[[eo:Nord-Irlando]]
+[[es:Irlanda del Norte]]
+[[et:Põhja-Iirimaa]]
+[[fi:Pohjois-Irlanti]]
+[[ga:Tuaisceart Éireann]]
+[[gl:Irlanda do Norte - Northern Ireland]]
+[[he:צפון אירלנד]]
+[[id:Irlandia Utara]]
+[[it:Irlanda del Nord]]
+[[ja:北アイルランド]]
+[[ka:ჩრდილოეთი ირლანდია]]
+[[ko:북아일랜드]]
+[[kw:Kledhbarth Iwerdhon]]
+[[nl:Noord-Ierland]]
+[[nn:Nord-Irland]]
+[[no:Nord-Irland]]
+[[pl:Irlandia Północna]]
+[[pt:Irlanda do Norte]]
+[[rm:Irlanda dal Nord]]
+[[ro:Irlanda de Nord]]
+[[ru:Северная Ирландия]]
+[[sco:Northren Ireland]]
+[[simple:Northern Ireland]]
+[[sk:Severné Írsko]]
+[[sl:Severna Irska]]
+[[sr:Северна Ирска]]
+[[sv:Nordirland]]
+[[zh:北爱尔兰]]
