--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -6,3 +6,16 @@
 
 ==Tála mpé==
 * [[Kongo Demokratiki (Tata-mokonzi)]]
+
+[[de:Mobutu Sese Seko]]
+[[en:Mobutu Sese Seko]]
+[[es:Mobutu Sese Seko]]
+[[fi:Mobutu Sese Seko]]
+[[gl:Mobutu Sese Seko]]
+[[id:Mobutu Sese Seko]]
+[[it:Mobutu Sese Seko]]
+[[ja:モブツ・セセ・セコ]]
+[[lt:Mobutu Sésé Seko]]
+[[nl:Mobutu Sese Seko]]
+[[pl:Mobutu Sese Seko]]
+[[sv:Mobutu Sese Seko]]
