--- a/Mobutu_Sese_Seko.mw
+++ b/Mobutu_Sese_Seko.mw
@@ -1,7 +1,7 @@
 [[category:Moto wa politiki (Kongo-Kinshasa)]]
 [[Category:Kongo Demokratiki (Tata-mokonzi)]]
 
-[[Image:Mobutu.jpg|thumb|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
+[[Image:Mobutu EU.jpg|thumb|right|Joseph-Désiré Mobutu (-1971) / Mobutu Sese Seko]]
 {{ndámbo}}
 
 ==Tála mpé==
